--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>AI Recruiter</title>
-  </head>
+  <head><meta charset="UTF-8" /><title>AI Recruiter</title></head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
